objects/Visit_Comments__c.object
<CustomObject>
    <description>used by techs &amp; subcontractors while on site as a space to enter their free form notes, should roll up into Case Comments on related Case.</description>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <description>displays name of asset selected on related SV.</description>
        <formula>Service_Visit__r.Asset__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays name of asset selected on related SV.</inlineHelpText>
        <label>Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Visit Comments</relationshipLabel>
        <relationshipName>Visit_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Visit__c</fullName>
        <label>Service Visit</label>
        <referenceTo>SV__c</referenceTo>
        <relationshipLabel>Visit Comments</relationshipLabel>
        <relationshipName>Visit_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Visit Comments</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Visit Comments</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>